--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -47,7 +47,7 @@
                     <div class="p-4">
                         <!-- Personal Information -->
                         <div class="mb-4">
-                            <h5 class="mb-4">Personal Information</h5>
+                            <h5 class="mb-4">Kişisel Bilgiler</h5>
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <br>
@@ -60,15 +60,15 @@
                                     </center>
                                 </div>
                                 <div class="col-md-6">
-                                    <label class="form-label">Email</label>
+                                    <label class="form-label">E-Posta</label>
                                     <input type="email" class="form-control" disabled value={{ user.email }}>
                                 </div>
                                 <div class="col-md-6">
-                                    <label class="form-label">First Name</label>
+                                    <label class="form-label">İsim</label>
                                     <input type="text" class="form-control" disabled value={{ user.first_name }}>
                                 </div>
                                 <div class="col-md-6">
-                                    <label class="form-label">Last Name</label>
+                                    <label class="form-label">Soyisim</label>
                                     <input type="text" class="form-control" disabled value={{ user.last_name }}>
                                 </div>
                                 <div class="col-md-6">
