--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -36,6 +36,8 @@
                                     class="fas fa-lock me-2"></i>Güvenlik ve Bildirim Ayarları</a>
                             <a class="nav-link" href="{% url 'profile_membership' %}"><i
                                     class="fas fa-credit-card me-2"></i>Üyelik Paketi Ayarları</a>
+                            <a class="nav-link " href="{% url 'profile_secretaries' %}"><i
+                                    class="fas fa-chart-line me-2"></i>Sekreter Yönetimi</a>
                             <a class="nav-link" href="{% url 'profile_activity' %}"><i
                                     class="fas fa-chart-line me-2"></i>Yapılan İşlemler</a>
                         </div>
