feat: create secretary Settings pages

--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -19,4 +19,10 @@
 <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
 <link href="{% static 'css/main.css' %}" rel="stylesheet">
+<style>
+    .disabled {
+        pointer-events: none;
+        opacity: 0.5;
+    }
+</style>
 
