--- a/templates/users/profile_secretaries.html
+++ b/templates/users/profile_secretaries.html
@@ -67,7 +67,7 @@
                         <div class="mb-4">
                             <h5 class="mb-4">Sekreter Yönetimi</h5>
 
-
+{% if user.membership_type == 'pro' and user.is_2fa_enabled %}
                             <h6 class="mt-4">Mevcut Sekreterler</h6>
                             <ul class="list-group">
                                 {% for secretary in secretaries %}
@@ -128,7 +128,11 @@
                                 <button type="submit" class="btn btn-primary">Sekreter Ekle</button>
                             </form>
 
-{% endif %}
+                            {% endif %}
+    {% else %}
+    <h6>Sekreter eklemek için Altın Üye Paketini almanız ve </h6>
+                                <h6>2 Faktorlü Kimlik Doğrulamayı açmanız gerekmektedir.</h6>
+                        {% endif %}
                         </div>
                     </div>
                 </div>
